--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 app/static/* linguist-vendored
+app/templates/* linguist-language=Python
+app/admin/templates/* linguist-language=Python
+app/user/templates/* linguist-language=Python
