--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-app/static/css/bootstrap* linguist-vendored
-app/static/css/freelancer* linguist-vendored
-app/*.scss linguist-vendored
+app/static/css/bootstrap* linguist-vendored=true
+app/static/css/freelancer* linguist-vendored=true
+app/*.scss linguist-vendored=true
