Added phonenumbers and humanize to requirements. Reorganized requirements to be alphabetical order

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-Flask_Login==0.4.1
 Flask==0.12.2
-WTForms==2.1
-Werkzeug==0.14.1
-Jinja2==2.9.6
-pymongo==3.6.1
-mongoengine==0.15.0
+Flask_Login==0.4.1
 Flask_WTF==0.14.2
 gunicorn==19.7.1
+humanize==0.5.1
+Jinja2==2.9.6
+mongoengine==0.15.0
+phonenumbers==8.9.5
+pymongo==3.6.1
 requests==2.18.4
+Werkzeug==0.14.1
+WTForms==2.1
